
- #11764: add prototypes to old-style C function definitions and declarations
  (Antonin Décimo, review by Xavier Leroy)

- #11796: protect lazy computation of code fragment digest by a mutex.
  This makes the thread sanitizer happier, and avoids duplicating
  the hashing work.
  (Gabriel Scherer, review by Xavier Leroy, report by Olivier Nicole)

### Type system:

- #6941, #11187: prohibit using classes through recursive modules
  inheriting or including a class belonging to a mutually-recursive module
  would previous behave incorrectly, and now results in a clean error.
  (Leo White, review by Gabriel Scherer and Florian Angeletti)

### Code generation and optimizations:

- #8998, #11321, #11430: change mangling of OCaml long identifiers
  from `camlModule__name_NNN` to `camlModule.name_NNN`.  The previous
  mangling schema, using `__`, was ambiguous.
  (Xavier Leroy, report by sliquister and Michael Bacarella,
   review by Gabriel Scherer)

- #10834: The -safer-matching option disables type-based optimizations of
  pattern-matching compilation. This allows to produce a match failure if
  a pattern-matching was wrongly assumed to be exhaustive. Since the
  exhaustiveness check for GADTs has had bugs in the past, it may be
  useful if you need extra security with GADTs.
  (Jacques Garrigue, review by Gabriel Scherer)

- #11102: Speed up register allocation by permanently spilling registers
  (Stephen Dolan, review by Xavier Leroy)

- #11418, #11708: RISC-V multicore support.
  (Nicolás Ojeda Bär, review by KC Sivaramakrishnan)

- #11686: Better spilling heuristic for the Linear Scan allocator for more
  efficient stack usage.
  (Nicolás Ojeda Bär, Gabriel Scherer, Alain Frisch, review by Gabriel Scherer,
  Alain Frisch and Nathanaëlle Courant)

### Standard library:

- #11836: Add `Array.map_inplace`.
  (Léo Andrès, review by Gabriel Scherer and KC Sivaramakrishnan)

- #11410: Add Set.to_list, Map.to_list, Map.of_list, Map.add_to_list,